offerDetail Page - text is overlapping fix

--- a/src/styles/model-detail.less
+++ b/src/styles/model-detail.less
@@ -152,7 +152,7 @@
 					}
 				}
 				.mb-model-detail-navigation-sub-list {
-					margn: 0;
+					margin: 0;
 					padding: 0;
 					li {
 						display: inline-block;
@@ -916,7 +916,7 @@
 						}
 					}
 					.mb-model-detail-navigation-sub-list {
-						margn: 0;
+						margin: 0;
 						padding: 0;
 						li {
 							display: inline-block;
@@ -1340,7 +1340,7 @@
 						}
 					}
 					.mb-model-detail-navigation-sub-list {
-						margn: 0;
+						margin: 0;
 						padding: 0;
 						li {
 							display: inline-block;
@@ -1765,15 +1765,18 @@
 						}
 					}
 					.mb-model-detail-navigation-sub-list {
-						margn: 0;
-						padding: 0;
+						margin-top: 40px;
+						padding-left: 6px;
+
 						li {
 							display: inline-block;
 							list-style: none;
+							color: #ffffff;
 							font-size: 18px;
+							margin-right: 15px;
 							a {
-								font-size: 18px;
 								color: #ffffff;
+								font-size: 18px;
 							}
 						}
 					}
